--- a/SpringSendingMail/src/main/resources/application.properties
+++ b/SpringSendingMail/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.datasource.url= jdbc:mysql://localhost/spring
 spring.datasource.username=spring
 #spring.datasource.password=spring
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.data.jpa.repositories.enabled=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database= MYSQL
