Added E-Mail Verification-Security Tag Lib-Remember me-Pass Encryption

--- a/SpringSendingMail/src/main/resources/application.properties
+++ b/SpringSendingMail/src/main/resources/application.properties
@@ -7,11 +7,16 @@ spring.profiles.active=dev
 
 management.contextPath = /manage
 
+#used while forming urls in mails to users etc.
+hostAndPort= localhost:8080
+
+
 #
 ##View Resolver
 #
 spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
+error.whitelabel.enabled=false
 
 #
 ##Database Configuration
@@ -26,6 +31,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database= MYSQL
 #spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 #spring.jpa.show-sql=true
+
+rememberMe.privateKey=some_secret_word
 
 
 # Number of ms to wait before throwing an exception if no connection is available.
