--- a/SpringSendingMail/pom.xml
+++ b/SpringSendingMail/pom.xml
@@ -22,7 +22,7 @@
 		<java.version>1.8</java.version>
 		<spring.security.version>4.1.2.RELEASE</spring.security.version>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -56,7 +56,8 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 		</dependency>
-
+		<!-- For Using JSP -->
+		
 		<!-- Data Access -->
 
 		<dependency>
@@ -74,7 +75,8 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
-
+		<!-- Data Access -->
+		
 		<!-- Spring Security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -86,7 +88,7 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>${spring.security.version}</version>
 		</dependency>
-
+		<!-- Spring Security -->
 
 		<!-- Mail -->
 		<dependency>
@@ -110,9 +112,16 @@
 			<artifactId>scala-library</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		<!-- Mail -->
 
+		<!-- Utilities -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.2.1</version>
+		</dependency>
 	</dependencies>
-
+	<!-- Utilities -->
 
 	<build>
 		<plugins>
