--- a/SpringSendingMail/src/main/resources/ValidationMessages.properties
+++ b/SpringSendingMail/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,4 @@
 emailPatternError=Please provide a vali email !
 nameSizeError= The Length of name must be between {min} and {max} characters
+passwordSizeError= Password must be between {min} and {max} characters
+emailSizeError= Length of email must be between {min} and {max}
